# Reshenie_NSH

./: .gitignore  Anchor.toml  README.md  architecture.md  netlify.toml
app/: next.config.mjs  package.json  tsconfig.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/create/: page.tsx
app/app/dashboard/: page.tsx
app/app/investments/: page.tsx
app/app/marketplace/: page.tsx
app/components/: Nav.tsx  WalletContextProvider.tsx
app/hooks/: useAnchorWallet.ts
app/lib/: package-lock.json  tsconfig.json
keys/: rwa_tokenization-keypair.json
lib/: client.ts  errors.ts  package.json
lib/idl/: rwa_tokenization.json
programs/rwa-tokenization/: Cargo.toml
programs/rwa-tokenization/src/: lib.rs
schemas/: rwa-asset-metadata.schema.json
