[package]
name = "rwa-tokenization"
version = "0.1.0"
description = "RWA agricultural asset tokenization MVP"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_tokenization"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
